--- a/src/assets/styles/pages/BoardDetails.css
+++ b/src/assets/styles/pages/BoardDetails.css
@@ -47,6 +47,7 @@
             grid-template-rows: auto;
             column-gap: 16px;
             width: 100%;
+            min-height: 148px;
 
             .board-title {
                 grid-area: title;
